some constatnts added
